
<resources>
    <string name="app_name">Thanks a day</string>

    <!--  error  -->
    <string name="error_open_url">Cannot open internet</string>
    <string name="error_update">A new update is available</string>

    <!--  Login  -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="hallym_univ">Hallym University</string>
    <string name="mentoring">Appreciation mentoring</string>

    <string name="login_ment">Welcome!\nPlease log in with your student information system to get started.</string>
    <string name="login_id">Student ID</string>
    <string name="login_pw">Password</string>

    <string name="login_help">Problems logging in?</string>
    <string name="login_help_str">You can find your ID and change your password\nYou can do it in the Student Information System.\n\nIf you don\'t remember your password,\nPlease contact the Student Support Team.</string>

    <string name="login_help_choice1">Student information system</string>
    <string name="login_help_choice2">Student Support Team</string>
    <string name="login_help_choice3">Cancel</string>

    <string name="OK">OK</string>
    <string name="CANCEL">Cancel</string>

    <!-- Status -->
    <string name="status_1">User</string>
    <string name="status_2">Waiting for mentor application</string>
    <string name="status_3">Waiting for mentee application</string>
    <string name="status_4">Mentor</string>
    <string name="status_5">Mentee</string>

    <!--  MainActivity  -->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_category">Category</string>
    <string name="bottom_nav_me">Me</string>
    <string name="bottom_nav_menu">Menu</string>
    <string name="bottom_nav_daily">Challenge</string>
    <string name="bottom_nav_chat">Chat</string>

    <!--  HomeFragment  -->
    <string name="action_notification">Notification</string>
    <string name="action_account">Account</string>
    <string name="link_become">Hallym\nBecome</string>
    <string name="link_bus">Bus\nSchedule</string>
    <string name="link_shuttle">Shuttle\nBus</string>
    <string name="link_map">School\nMap</string>

    <string name="title_thanks">Thank you</string>
    <string name="title_kind">Virtues of the day</string>
    <string name="title_save">Saving of the day</string>
    <string name="title_book">Readings of the month</string>
    <string name="title_contest">Contest</string>

    <string name="title_thanks_word">Thanks of the day</string>

    <string name="title_thanks_short">Thanks</string>
    <string name="title_kind_short">Virtues</string>
    <string name="title_save_short">Saving</string>
    <string name="title_book_short">Readings</string>
    <string name="title_contest_short">Contest</string>

    <!-- MenuFragment -->
    <string name="menu_tab_user">User</string>
    <string name="menu_tab_member">Manage members</string>
    <string name="menu_tab_app">Application</string>

    <string name="menu_manage_account">Manage account</string>
    <string name="menu_apply_mentee">Apply for mentee</string>
    <string name="menu_apply_mentor">Apply for mentor</string>
    <string name="menu_manage_mentee">Manage mentees</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_app_info">Application information</string>

    <string name="menu_applyMentor_already">Already applied for a mentee</string>
    <string name="menu_applyMentor_noMentee">You must go through the mentee first</string>
    <string name="menu_applyMentee_already">Already applied for a mentor</string>
    <string name="menu_applyMen_already">Mentoring is currently in progress</string>
    <string name="menu_manageMen_noMentor">I am not a mentor</string>
    <string name="menu_manageMen_success">Your mentoring request has been completed</string>

    <!--  StartingActivity  -->
    <string name="permission_require">Requires permission for storage space.</string>
    <string name="permission_go">Go to set permissions</string>
    <string name="permission_no">Cancel</string>

    <!--  ChatInActivity  -->
    <string name="edit_hint">Enter Message</string>

    <!--  DailyActivity  -->
    <string name="daily_thanks_text">Five things to be grateful for a day\nWrite down the things you are grateful for today.</string>
    <string name="daily_kind_text">Do one good thing a day\nWrite down what you did today.</string>
    <string name="daily_save_text">Saving one thing a day\nWrite down what you saved today.</string>
    <string name="daily_book_text">Read one book a month\nWrite down your impressions of a book you read deeply.</string>
    <string name="daily_image_load_fail">Failed to import photos.</string>
    <string name="daily_add">+Add</string>
    <string name="daily_add_title">Writing</string>
    <string name="daily_add_fail">Please enter a contents</string>
    <string name="daily_is_full">Goal achieved!</string>

    <!--  LoginActivity  -->
    <string name="login_auto_login">Keep me signed in</string>
    <string name="login_empty">Please check your ID and password</string>
    <string name="login_fail">ID or password is different</string>

    <!--  UserInfoActivity  -->
    <string name="info_tab_history">Activity history</string>
    <string name="info_signup_date">Member since</string>
    <string name="info_activity_days">Active days</string>
    <string name="info_doc_count">Total writing</string>

    <!--  ApplyMenActivity  -->
    <string name="apply_men_submit">Apply</string>
    <string name="apply_men_status_true">In active</string>
    <string name="apply_men_status_false">Recruiting</string>
    <string name="apply_men_status_null">End of activity</string>
    <string name="apply_men_sure">Cancellation is not possible when applying for mentoring\nAre you sure you want to proceed?</string>

    <!--  SettingActivity  -->
    <string name="setting_tab_private_setting">Personal settings</string>
    <string name="setting_color">Preferred color</string>
    <string name="setting_tab_info">Privacy</string>
    <string name="setting_tab_lock">App lock</string>
    <string name="setting_pin">Set PIN</string>
    <string name="setting_finger">Set Fingerprint</string>
    <string name="setting_tab_app_setting">Application settings</string>
    <string name="setting_first_page">Set first page</string>
    <string name="setting_tab_noti">Receive notifications</string>
    <string name="setting_noti_daily">Daily goal reminder</string>
    <string name="setting_noti_category">Notification type</string>
    <string name="setting_chat">Direct message notifications</string>
    <string name="setting_tab_notice">Notification</string>
    <string name="setting_operation">Gratitude campaign operation policy</string>
    <string name="setting_private_info">Privacy policy</string>
    <string name="setting_tab_operation">Operation policy</string>
    <string name="setting_help">Help</string>
    <string name="setting_qna">Contact us</string>
    <string name="setting_bug">Report a bug</string>
    <string name="setting_danger">Danger</string>
    <string name="setting_remove_data">Remove all data</string>
    <string name="setting_remove_data_check">Are you sure you want to delete</string>


    <!--  PINActivity  -->
    <string name="pin_check_title">Enter your PIN number</string>
    <string name="pin_check_finger">Enter your fingerprint</string>
    <string name="pin_old_title">Enter your old PIN number</string>
    <string name="pin_new_title">Enter the PIN to set</string>
    <string name="pin_4_letter">Please enter at least 4 characters</string>
    <string name="pin_fail">Incorrect PIN entered</string>
    <string name="pin_remove">Remove PIN information</string>
    <string name="pin_update">PIN changed</string>

    <!--  DiaryActivity  -->
    <string name="diary_title">Thanks Diary</string>
    <string name="diary_exp">Write today\'s gratitude journal</string>

    <!-- MenteeInfoActivity -->
    <string name="mentee_info_term"> mentoring</string>

    <!-- ChatActivity -->
    <string name="chat_send">Send message</string>

    <!-- notification message -->
    <string name="message_notice_body">Your notice has been registered</string>
    <string name="message_daily_body"><b>Thanks of the day</b> Time to write about 5 things you are grateful for!</string>

    <string-array name="first_page">
        <item>Home</item>
        <item>Challenge</item>
        <item>Chat</item>
        <item>Menu</item>
    </string-array>

    <string-array name = "setting_color">
        <item>Green</item>
        <item>Orange</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Indigo</item>
    </string-array>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>
