<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_secondary_rounded"
        android:gravity="center"
        android:padding="30dp">

    <TextView
            android:text="@string/login_help"
            android:textSize="18sp"
            android:textColor="@color/color_text_primary"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:text="@string/login_help_str"
            android:textColor="@color/color_text_primary"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#3333"/>
    <TextView
            android:id="@+id/loginHelpChoice1"
            android:text="@string/login_help_choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textSize="18sp"
            android:textColor="@color/color_primary"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#3333"/>
    <TextView
            android:id="@+id/loginHelpChoice2"
            android:text="@string/login_help_choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textSize="18sp"
            android:textColor="@color/color_primary"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#3333"/>
    <TextView
            android:id="@+id/loginHelpChoice3"
            android:text="@string/login_help_choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textSize="18sp"
            android:textColor="@color/color_primary"/>


</LinearLayout>