<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarSetting"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:background="@color/color_bg_primary"
            android:layout_height="wrap_content"/>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_bg_secondary">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            tools:context=".SettingActivity">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_tab_private_setting"/>
        <androidx.cardview.widget.CardView
                android:id="@+id/settingColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="13dp"
                app:cardElevation="0dp"
                android:layout_marginVertical="8dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/color_text_primary"
                    android:padding="15dp"
                    android:text="@string/setting_color" />

            <TextView
                    android:id="@+id/settingColorTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textAlignment="textEnd"
                    android:padding="15dp"
                    app:drawableEndCompat="@drawable/ic_baseline_chevron_right_24"/>
        </androidx.cardview.widget.CardView>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_tab_info"/>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="13dp"
                app:cardElevation="0dp"
                android:layout_marginVertical="8dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true"
                    android:padding="15dp">
                <Switch
                        android:id="@+id/settingAppLock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/color_text_primary"
                        android:text="@string/setting_tab_lock"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/settingAppLockLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:orientation="vertical">

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/color_bg_secondary"/>
                    <TextView
                            android:id="@+id/settingPin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textColor="@color/color_text_primary"
                            android:text="@string/setting_pin"
                            app:drawableEndCompat="@drawable/ic_baseline_chevron_right_24" />

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/color_bg_secondary"/>
                    <Switch
                            android:id="@+id/settingFinger"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textColor="@color/color_text_primary"
                            android:text="@string/setting_finger"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/color_bg_secondary"/>
                <Switch
                        android:id="@+id/settingAutoLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/color_text_primary"
                        android:text="@string/login_auto_login"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>



        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_tab_app_setting"/>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="13dp"
                app:cardElevation="0dp"
                android:layout_marginVertical="8dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:animateLayoutChanges="true"
                    android:padding="15dp">
                <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/settingFirstPage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textColor="@color/color_text_primary"
                            android:text="@string/setting_first_page"/>
                    <TextView
                            android:id="@+id/settingFirstPageTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:textAlignment="textEnd"
                            app:drawableEndCompat="@drawable/ic_baseline_chevron_right_24"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/color_bg_secondary"/>
                <Switch
                        android:id="@+id/settingReceiveNoti"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/color_text_primary"
                        android:text="@string/setting_tab_noti"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/settingReceiveNotiLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:orientation="vertical">
                <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/color_bg_secondary"/>
                <Switch
                        android:id="@+id/settingNotiDaily"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/color_text_primary"
                        android:text="@string/setting_noti_daily"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

<!--                <View-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="2dp"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:layout_marginBottom="10dp"-->
<!--                        android:background="@color/color_bg_secondary"/>-->
<!--                <TextView-->
<!--                        android:id="@+id/settingNotiCategory"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:textSize="18sp"-->
<!--                        android:textColor="@color/color_text_primary"-->
<!--                        android:text="@string/setting_noti_category"-->
<!--                        app:drawableEndCompat="@drawable/ic_baseline_chevron_right_24" />-->

                <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/color_bg_secondary"/>
                <Switch
                        android:id="@+id/settingChat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/color_text_primary"
                        android:text="@string/setting_chat"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_tab_notice"/>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="13dp"
                app:cardElevation="0dp"
                android:layout_marginVertical="8dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">
<!--                <TextView-->
<!--                        android:id="@+id/settingOperation"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:textSize="18sp"-->
<!--                        android:textColor="@color/color_primary"-->
<!--                        android:text="@string/setting_operation"/>-->

<!--                <View-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="2dp"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:layout_marginBottom="10dp"-->
<!--                        android:background="@color/color_bg_secondary"/>-->
                <TextView
                        android:id="@+id/settingPrivateOperation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/color_primary"
                        android:text="@string/setting_private_info" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>


<!--        <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/setting_tab_operation"/>-->
<!--        <androidx.cardview.widget.CardView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:cardCornerRadius="13dp"-->
<!--                app:cardElevation="0dp"-->
<!--                android:layout_marginVertical="8dp">-->
<!--            <androidx.appcompat.widget.LinearLayoutCompat-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="vertical"-->
<!--                    android:padding="15dp">-->
<!--                <TextView-->
<!--                        android:id="@+id/settingHelp"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:textSize="18sp"-->
<!--                        android:textColor="@color/color_primary"-->
<!--                        android:text="@string/setting_help"/>-->

<!--                <View-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="2dp"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:layout_marginBottom="10dp"-->
<!--                        android:background="@color/color_bg_secondary"/>-->
<!--                <TextView-->
<!--                        android:id="@+id/settingQnA"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:textSize="18sp"-->
<!--                        android:textColor="@color/color_primary"-->
<!--                        android:text="@string/setting_qna" />-->
<!--                <View-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="2dp"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:layout_marginBottom="10dp"-->
<!--                        android:background="@color/color_bg_secondary"/>-->
<!--                <TextView-->
<!--                        android:id="@+id/settingBug"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:textSize="18sp"-->
<!--                        android:textColor="@color/color_primary"-->
<!--                        android:text="@string/setting_bug" />-->

<!--            </androidx.appcompat.widget.LinearLayoutCompat>-->
<!--        </androidx.cardview.widget.CardView>-->


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_danger"/>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="13dp"
                app:cardElevation="0dp"
                android:layout_marginVertical="8dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">
                <TextView
                        android:id="@+id/settingRemoveData"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="#bb0000"
                        android:text="@string/setting_remove_data"/>


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>


    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>
