<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bg_primary"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:layout_margin="8dp"
        android:padding="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/mentees_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:textSize="22dp"
                android:layout_marginTop="25dp"
                android:textColor="@color/color_text_primary"
                android:background="@drawable/bg_secondary_circular"
                android:backgroundTint="@color/color_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        <TextView
                android:id="@+id/mentees_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mentees_icon"
                android:gravity="center"
                android:textColor="@color/color_text_primary"
                android:layout_marginTop="10dp"
                android:textSize="18sp"/>
        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/mentees_name"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/bg_secondary_rounded"
                android:layout_margin="12dp"
                android:paddingHorizontal="12dp"
                android:columnCount="2">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingVertical="6dp"
                    android:text="@string/title_thanks_short"/>
            <TextView
                    android:id="@+id/mentees_thanks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="end"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingVertical="6dp"
                    android:text="@string/title_kind_short"/>
            <TextView
                    android:id="@+id/mentees_kind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="end"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingVertical="6dp"
                    android:text="@string/title_save_short"/>
            <TextView
                    android:id="@+id/mentees_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="end"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingVertical="6dp"
                    android:text="@string/title_book_short"/>
            <TextView
                    android:id="@+id/mentees_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="end"/>

        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
